UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Matrix__c/Pricing_Formula_Matrix__c.object-meta.xml
<CustomObject>
    <label>Pricing Formula Matrix</label>
    <nameField>
        <displayFormat>ABP-{000000}</displayFormat>
        <label>Pricing Formula Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Formula Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>