UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Matrix__c/fields/Formula_Label__c.field-meta.xml
<CustomField>
    <fullName>Formula_Label__c</fullName>
    <label>Formula Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>