UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Matrix__c/fields/Formula_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_Name__c</fullName>
    <label>Formula Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>