UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Matrix__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <description>Speed in Megabyte</description>
    <label>Speed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>