UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Description__c</columns>
    <columns>State__c</columns>
    <columns>Term__c</columns>
    <columns>Speed__c</columns>
    <columns>Formula_Label__c</columns>
    <columns>Enabled__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>